added unit test for et changes